Contact form implemented

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,9 +7,12 @@
     "Ezionum",
     "FOREX",
     "fredluggard",
+    "Kgxp",
+    "lwcm",
     "Nnoli",
     "Nolly",
     "Nsukka",
+    "qkyb",
     "YOUTUBER"
   ]
 }
